--- a/Todo.WebApi/packages.config
+++ b/Todo.WebApi/packages.config
@@ -2,18 +2,19 @@
 <packages>
   <package id="AutoMapper" version="2.1.267" targetFramework="net40" />
   <package id="EntityFramework" version="5.0.0" targetFramework="net40" />
-  <package id="Microsoft.AspNet.WebApi.Client" version="4.0.20710.0" targetFramework="net40" />
-  <package id="Microsoft.AspNet.WebApi.Core" version="4.0.20710.0" targetFramework="net40" />
-  <package id="Microsoft.AspNet.WebApi.OData" version="0.1.0-alpha-120815" targetFramework="net40" />
-  <package id="Microsoft.Data.Edm" version="5.0.2" targetFramework="net40" />
-  <package id="Microsoft.Data.OData" version="5.0.1" targetFramework="net40" />
-  <package id="Microsoft.Data.OData.Contrib" version="5.0.1.50813" targetFramework="net40" />
-  <package id="Microsoft.IdentityModel" version="6.1.7600.16394" targetFramework="net40" />
-  <package id="Microsoft.Net.Http" version="2.0.20710.0" targetFramework="net40" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="4.0.20710.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="4.0.20710.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.OData" version="0.1.0-alpha-120815" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.WebHost" version="4.0.20710.0" targetFramework="net45" />
+  <package id="Microsoft.Data.Edm" version="5.0.2" targetFramework="net45" />
+  <package id="Microsoft.Data.OData" version="5.0.1" targetFramework="net45" />
+  <package id="Microsoft.Data.OData.Contrib" version="5.0.1.50813" targetFramework="net45" />
+  <package id="Microsoft.Net.Http" version="2.0.20710.0" targetFramework="net45" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Microsoft.WindowsAzure.ConfigurationManager" version="1.7.0.3" targetFramework="net40" />
-  <package id="Newtonsoft.Json" version="4.5.9" targetFramework="net40" />
+  <package id="Newtonsoft.Json" version="4.5.10" targetFramework="net45" />
   <package id="SignalR.Server" version="0.5.3" targetFramework="net40" />
-  <package id="System.Spatial" version="5.0.2" targetFramework="net40" />
-  <package id="Thinktecture.IdentityModel" version="2.1.4" targetFramework="net40" />
+  <package id="System.Spatial" version="5.0.2" targetFramework="net45" />
+  <package id="Thinktecture.IdentityModel" version="2.1.7" targetFramework="net45" />
   <package id="WindowsAzure.Storage" version="1.7.0.0" targetFramework="net40" />
 </packages>
