--- a/.gitignore
+++ b/.gitignore
@@ -14,4 +14,15 @@ PublishProfiles
 _ReSharper.*
 *.resharper
 packages
-*.xcuserstate
+ 
+*~.nib
+*.swp
+.DS_Store
+*.mode1
+*.mode1v3
+*.mode2v3
+*.perspective
+*.perspectivev3
+*.pbxuser
+*.xcworkspace
+xcuserdata
