--- a/Todo.Apps/Android/AndroidManifest.xml
+++ b/Todo.Apps/Android/AndroidManifest.xml
@@ -37,6 +37,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity 
+        	android:name="com.phonegap.plugins.childBrowser.ChildBrowser" 
+        	android:label="@string/app_name"> 
+			<intent-filter> 
+			</intent-filter> 
+		</activity> 
     </application>
 
 </manifest>
