--- a/Todo.Apps/iOS/tUdUs/Cordova.plist
+++ b/Todo.Apps/iOS/tUdUs/Cordova.plist
@@ -33,8 +33,8 @@
 	</array>
 	<key>Plugins</key>
 	<dict>
-		<key>ChildBrowserCommand</key>
-		<string>ChildBrowser</string>
+		<key>ChildBrowser</key>
+		<string>ChildBrowserCommand</string>
 		<key>Device</key>
 		<string>CDVDevice</string>
 		<key>Logger</key>
