--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,6 @@ packages
 *.xcuserstate
 *.pbxprof
 xcuserdata
+Todo.Apps/iOS/tUdUs.xcodeproj/project.pbxproj
+
+Todo.Apps/iOS/tUdUs.xcodeproj/project.xcworkspace/xcuserdata/christian.xcuserdatad/UserInterfaceState.xcuserstate
