--- a/Todo.Apps/iOS/tUdUs/Cordova.plist
+++ b/Todo.Apps/iOS/tUdUs/Cordova.plist
@@ -26,8 +26,8 @@
 	<array>
 		<string>https://secure.shared.live.com</string>
 		<string>https://login.live.com</string>
-		<string>http://maps.googleapis.com</string>
-		<string>http://maps.gstatic.com</string>
+		<string>http://*.googleapis.com</string>
+		<string>http://*.gstatic.com</string>
 		<string>http://tttodos.azurewebsites.net</string>
 		<string>https://tttodos.azurewebsites.net</string>
 		<string>https://*.google.com</string>
