--- a/TodoWebApp/Todo.WebApp.csproj
+++ b/TodoWebApp/Todo.WebApp.csproj
@@ -204,6 +204,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="www\images\loading-image.gif" />
+    <Content Include="www\js\viewmodels\oauth2ViewModel.js" />
     <Content Include="www\views\index_old.html" />
     <Content Include="www\views\info.html" />
     <Content Include="www\views\settings.html" />
