--- a/Todo.WebApi/packages.config
+++ b/Todo.WebApi/packages.config
@@ -2,6 +2,8 @@
 <packages>
   <package id="AutoMapper" version="2.1.267" targetFramework="net40" />
   <package id="EntityFramework" version="5.0.0" targetFramework="net40" />
+  <package id="Microsoft.AspNet.SignalR.Core" version="1.0.0-alpha1" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.Hosting.Common" version="1.0.0-alpha1" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Client" version="4.0.20710.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Core" version="4.0.20710.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.OData" version="0.1.0-alpha-120815" targetFramework="net45" />
@@ -13,7 +15,6 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Microsoft.WindowsAzure.ConfigurationManager" version="1.7.0.3" targetFramework="net40" />
   <package id="Newtonsoft.Json" version="4.5.10" targetFramework="net45" />
-  <package id="SignalR.Server" version="0.5.3" targetFramework="net40" />
   <package id="System.Spatial" version="5.0.2" targetFramework="net45" />
   <package id="Thinktecture.IdentityModel" version="2.1.7" targetFramework="net45" />
   <package id="WindowsAzure.Storage" version="1.7.0.0" targetFramework="net40" />
