--- a/TodoWebApp/packages.config
+++ b/TodoWebApp/packages.config
@@ -10,6 +10,10 @@
   <package id="Microsoft.AspNet.Providers" version="1.2" targetFramework="net40" />
   <package id="Microsoft.AspNet.Providers.Core" version="1.1" targetFramework="net40" />
   <package id="Microsoft.AspNet.Razor" version="2.0.20710.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.Core" version="1.0.0-alpha1" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.Hosting.AspNet" version="1.0.0-alpha1" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.Hosting.Common" version="1.0.0-alpha1" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.JS" version="1.0.0-alpha1" targetFramework="net45" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.0.0" targetFramework="net40" />
   <package id="Microsoft.AspNet.WebApi.Client" version="4.0.20710.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Core" version="4.0.20710.0" targetFramework="net45" />
@@ -27,10 +31,6 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net40" />
   <package id="Modernizr" version="2.5.3" targetFramework="net40" />
   <package id="Newtonsoft.Json" version="4.5.10" targetFramework="net45" />
-  <package id="SignalR.Hosting.AspNet" version="0.5.3" targetFramework="net40" />
-  <package id="SignalR.Hosting.Common" version="0.5.3" targetFramework="net40" />
-  <package id="SignalR.Js" version="0.5.3" targetFramework="net40" />
-  <package id="SignalR.Server" version="0.5.3" targetFramework="net40" />
   <package id="System.Spatial" version="5.0.2" targetFramework="net45" />
   <package id="Thinktecture.IdentityModel" version="2.1.7" targetFramework="net45" />
   <package id="WebGrease" version="1.1.0" targetFramework="net40" />
