--- a/Todo.Apps/iOS/tUdUs/Cordova.plist
+++ b/Todo.Apps/iOS/tUdUs/Cordova.plist
@@ -21,7 +21,7 @@
 	<key>OpenAllWhitelistURLsInWebView</key>
 	<false/>
 	<key>BackupWebStorage</key>
-	<true/>
+	<string>none</string>
 	<key>ExternalHosts</key>
 	<array>
 		<string>http://localhost</string>
