--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,5 @@ packages
 *.pbxuser
 *.xcuserstate
 xcuserdata
+
+Todo.Apps/iOS/tUdUs.xcodeproj/xcuserdata/christian.xcuserdatad/xcschemes/xcschememanagement.plist
