--- a/TodoWebApp/packages.config
+++ b/TodoWebApp/packages.config
@@ -9,7 +9,7 @@
   <package id="Microsoft.AspNet.Mvc" version="4.0.20710.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Providers" version="1.2" targetFramework="net40" />
   <package id="Microsoft.AspNet.Providers.Core" version="1.1" targetFramework="net40" />
-  <package id="Microsoft.AspNet.Razor" version="2.0.20710.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Razor" version="2.0.20715.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.SignalR.Core" version="1.0.0-alpha2" targetFramework="net45" />
   <package id="Microsoft.AspNet.SignalR.Hosting.AspNet" version="1.0.0-alpha2" targetFramework="net45" />
   <package id="Microsoft.AspNet.SignalR.Hosting.Common" version="1.0.0-alpha2" targetFramework="net45" />
@@ -17,21 +17,21 @@
   <package id="Microsoft.AspNet.Web.Optimization" version="1.0.0" targetFramework="net40" />
   <package id="Microsoft.AspNet.WebApi.Client" version="4.0.20710.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Core" version="4.0.20710.0" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi.HelpPage" version="0.1.0-alpha-120814" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi.OData" version="0.1.0-alpha-120815" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi.Tracing" version="0.1.0-alpha-120814" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.HelpPage" version="0.2.0-alpha" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.OData" version="0.2.0-alpha" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.Tracing" version="0.2.0-alpha" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="4.0.20710.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="2.0.20710.0" targetFramework="net45" />
-  <package id="Microsoft.Data.Edm" version="5.0.2" targetFramework="net45" />
-  <package id="Microsoft.Data.OData" version="5.0.1" targetFramework="net45" />
-  <package id="Microsoft.Data.OData.Contrib" version="5.0.1.50813" targetFramework="net45" />
+  <package id="Microsoft.Data.Edm" version="5.1.0-rc2" targetFramework="net45" />
+  <package id="Microsoft.Data.OData" version="5.1.0-rc2" targetFramework="net45" />
+  <package id="Microsoft.Data.OData.Contrib" version="5.1.0.51016-rc2" targetFramework="net45" />
   <package id="Microsoft.jQuery.Unobtrusive.Ajax" version="2.0.20710.0" targetFramework="net40" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="2.0.20710.0" targetFramework="net40" />
   <package id="Microsoft.Net.Http" version="2.0.20710.0" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net40" />
   <package id="Modernizr" version="2.5.3" targetFramework="net40" />
   <package id="Newtonsoft.Json" version="4.5.10" targetFramework="net45" />
-  <package id="System.Spatial" version="5.0.2" targetFramework="net45" />
-  <package id="Thinktecture.IdentityModel" version="2.1.7" targetFramework="net45" />
+  <package id="System.Spatial" version="5.1.0-rc2" targetFramework="net45" />
+  <package id="Thinktecture.IdentityModel" version="2.2.1" targetFramework="net45" />
   <package id="WebGrease" version="1.1.0" targetFramework="net40" />
 </packages>
